--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,52 +1,70 @@
 #config_version=5
 
+hardware:
+  platform: opp
+  driverboards: gen2
+
+opp:
+  ports: /dev/ttyACM0, /dev/ttyACM1
+  chains:
+    0: /dev/ttyACM1
+    1: /dev/ttyACM0
+
+machine:
+  balls_installed: 6 #How many balls are physically in your game
+  min_balls: 6 #How few balls can be accounted for before you can start a game
+    
+
+game:
+  balls_per_game: 3
+  max_players: 4
+
 bcp:
     debug: True
 
-
 switches:
+  s_trough1:
+    number: 1-0-11
+  s_trough2:
+    number: 1-0-16
+  s_trough3:
+    number: 1-0-17
+  s_trough4:
+    number: 1-0-18
+  s_trough5:
+    number: 1-0-19
+  s_trough6:
+    number: 1-0-24
+  s_trough_jam:
+    number: 1-0-10
+  s_plunger:
+    number: 1-0-9
+  s_start:
+    number: 1-0-1
+    tags: start    
   s_left_flipper:
-    number:
+    number: 1-0-2
     tags: left_flipper
   s_right_flipper:
-    number:
+    number: 1-0-3
     tags: right_flipper
-  s_trough1:
-    number: 1
-  s_trough2:
-    number: 2
-  s_trough3:
-    number: 3
-  s_trough4:
-    number: 4
-  s_trough5:
-    number: 5
-  s_trough6:
-    number: 6
-  s_trough_jam:
-    number: 7
-  s_plunger:
-    number: 10
-  s_start:
-    number: 11
-    tags: start    
   s_right_inlane:
-    number: 12
+    number: 1-0-8
     tags: playfield_active
 
 coils:
   c_flipper_left_main:
-    number: 0  # again, these numbers will probably be different for you
+    number: 1-0-0  # again, these numbers will probably be different for you
   c_flipper_left_hold:
-    number: 1  # check your platform-specific documentation for the actual numbers
+    number: 1-0-1  # check your platform-specific documentation for the actual numbers
     allow_enable: true
   c_flipper_right_main:
-    number: 2
+    number: 1-0-2
   c_flipper_right_hold:
-    number: 3
+    number: 1-0-3
     allow_enable: true
   c_trough_eject:
-    number: 4
+    number: 1-0-4
 
 
 playfields:
