--- a/config/keyboard.yaml
+++ b/config/keyboard.yaml
@@ -7,6 +7,8 @@ keyboard:
     switch: s_right_flipper
   s:
     switch: s_start
+  e:
+    switch: s_enter_playfield
   1:
     switch: s_trough1
     toggle: true
