Moved some files around, Fixed path to dependencies

--- a/mc/conf/systemd/mpfmc-frontend.service
+++ b/mc/conf/systemd/mpfmc-frontend.service
@@ -3,8 +3,8 @@ Description=Mission Pinball Framework Media controller - Frontend
 
 [Service]
 User=mpfuser
-WorkingDirectory=/home/mpfuser/H5DMD/www/
+WorkingDirectory=/home/mpfuser/mpf-scott-pilgrimm/mc/www/
 ExecStart=/usr/bin/python -m http.server 8080
 
 [Install]
-WantedBy=mpf, multi-user.target
+WantedBy=multi-user.target
