Removed custom Logger (was hidding log origin), Added Base mode, linked score to mpf variable

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,6 +13,9 @@ playfields:
     tags: default
     default_source_device: bd_plunger
 
+modes:
+  - base
+
 config:
   - hardware.yaml
   - bcp.yaml
@@ -21,3 +24,4 @@ config:
   - ball-devices.yaml
   - flippers.yaml
   - keyboard.yaml
+#  - modes.yaml
