--- a/config/bcp.yaml
+++ b/config/bcp.yaml
@@ -2,6 +2,12 @@
 
 bcp:
   debug: True
-  servers:
-    url_style:
-      ip: 0.0.0.0
+
+#  connections:
+#    local_display:
+#      host: archpinball.dev
+#      port: 5050  
+  
+#  servers:
+#    url_style:
+#      ip: 127.0.0.1
