--- a/mc/conf/.config/chromium-flags.conf
+++ b/mc/conf/.config/chromium-flags.conf
@@ -1,16 +1,17 @@
---no-sandbox
+#--show-fps-counter
+#--no-sandbox
+--kiosk
+--enable-accelerated-2d-canvas
+--enable-user-stylesheet
+--autoplay-policy=no-user-gesture-required
+--enable-unsafe-webgpu
+--overlay-scrollbar=1
 --ignore-gpu-blocklist
 --enable-gpu-rasterization
 --enable-zero-copy
---enable-features=VaapiVideoDecoder
+--enable-features=VaapiVideoDecoder,Vulkan,UseSkiaRenderer
 --use-gl=desktop
---kiosk
 --autoplay-policy=no-user-gesture-required
 --ignore-autoplay-restrictions
 --disk-cache-dir=/dev/null
 --disk-cache-size=1
-#--enable-features=UseOzonePlatform
-#--ozone-platform=wayland
-#--enable-logging=stderr
-#--v=1
-# > /home/mpfuser/chromium.log 2>&1
